--- a/sass/main.css
+++ b/sass/main.css
@@ -72,7 +72,8 @@ img {
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -96,7 +97,8 @@ img {
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.prev:hover,
+.next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -132,7 +134,8 @@ img {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
@@ -152,7 +155,9 @@ img {
 }
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next, .text {
+  .prev,
+  .next,
+  .text {
     font-size: 11px;
   }
 }
@@ -249,7 +254,8 @@ body {
     outline: none;
     cursor: pointer;
   }
-  button.icon:focus, button.icon:hover {
+  button.icon:focus,
+  button.icon:hover {
     border: 0;
     outline: none;
     background: #514646;
