--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,32 +1,41 @@
+* {
+    box-sizing: border-box
+}
 
-
-* {box-sizing: border-box}
 // body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
-  /* max-width: 1000px; */
-  position: relative;
-  margin: auto;
+    /* max-width: 1000px; */
+    position: relative;
+    margin: auto;
 }
-.slide-content{
+
+.slide-content {
     width: 50%;
     position: absolute;
-    top:0;
+    top: 0;
     color: white;
     margin-top: 30px;
     margin: 20px;
     margin-left: 50px;
 }
-.content1{
+
+.content1 {
     margin-top: 60px;
     font-size: 60px;
     color: rgb(245, 37, 47);
     margin-bottom: 0px;
 }
-.button{
+
+.button {
     border: none;
     // background-color: #717171;
     // background-color: #514646;
@@ -36,7 +45,8 @@ img {vertical-align: middle;}
     cursor: pointer;
     border-radius: 12px;
 }
-.button1{
+
+.button1 {
     border: none;
     // background-color: #717171;
     // background-color: #514646;
@@ -46,112 +56,132 @@ img {vertical-align: middle;}
     cursor: pointer;
     border-radius: 12px;
 }
-.button:hover{
+
+.button:hover {
     color: rgb(245, 37, 47);
 }
-.slide-content1{
+
+.slide-content1 {
     width: 90%;
     position: absolute;
-    top:0;
+    top: 0;
     color: white;
     margin-top: 40px;
     margin: 20px;
     margin-left: 50px;
     text-align: center;
 }
-.content2{
+
+.content2 {
     margin-top: 40px;
 }
+
 /* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+.active,
+.dot:hover {
+    background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+
+    .prev,
+    .next,
+    .text {
+        font-size: 11px
+    }
 }
+
 body {
     margin: 0;
     padding: 0;
     // font-family: Helvetica, sans-serif;
     font-family: "Playwrite ES", cursive;
 }
+
 .topnav {
     width: 100%;
     overflow: hidden;
     // background-color: #eee;
     // background-color: #7b7878;
     background-color: #514646;
+
     // position: absolute;
     a {
         float: left;
@@ -166,8 +196,9 @@ body {
             // background-color: #ddd;
             color: rgb(245, 37, 47);
         }
-       
+
     }
+
     .logo {
         float: left;
         display: block;
@@ -182,28 +213,33 @@ body {
             width: 30px;
             height: auto;
         }
+
         &:hover {
             background: transparent;
         }
     }
+
     button {
         display: none;
     }
 }
+
 .container {
     padding: 0px 10px;
 }
+
 @media screen and (max-width: 900px) {
-    .slide-content{
+    .slide-content {
         width: 50%;
-    position: absolute;
-    top:0;
-    color: white;
-    margin: 20px;
-    margin-left: 50px;
+        position: absolute;
+        top: 0;
+        color: white;
+        margin: 20px;
+        margin-left: 50px;
         // margin-top: 30px;
         // margin: 20px;
     }
+
     .content1 {
         margin-top: 10px;
         /* font-size: 80px; */
@@ -211,27 +247,32 @@ body {
         color: rgb(245, 37, 47);
         // margin-bottom: 0px;
     }
-    .slide-content1{
+
+    .slide-content1 {
         width: 80%;
         position: absolute;
-        top:0;
+        top: 0;
         color: white;
         margin-top: 30px;
         margin: 20px;
         margin-left: 50px;
         text-align: center;
     }
-    .p2{
+
+    .p2 {
         font-size: 10px;
     }
-    .content2{
+
+    .content2 {
         margin-top: 0px;
     }
 }
+
 @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {
         display: none;
     }
+
     .topnav button.icon {
         // background: #d8d8d8;
         background-color: #514646;
@@ -242,15 +283,18 @@ body {
         outline: none;
         cursor: pointer;
     }
-    button.icon:focus, button.icon:hover {
+
+    button.icon:focus,
+    button.icon:hover {
         border: 0;
         outline: none;
         background: #514646;
     }
-  
+
 }
-@media screen and (min-width: 600px){
-    .topnav{
+
+@media screen and (min-width: 600px) {
+    .topnav {
         display: flex;
         justify-content: space-evenly;
         // position: fixed;
@@ -258,6 +302,7 @@ body {
 
     }
 }
+
 @media screen and (max-width: 600px) {
     .topnav.responsive {
         position: relative;
@@ -267,18 +312,21 @@ body {
             display: block;
             text-align: left;
         }
-         .center{
+
+        .center {
             text-align: center;
         }
+
         .icon {
             position: absolute;
             right: 0;
             top: 0;
         }
-       
+
     }
-  
+
 }
+
 //menu
 
 // * { 
@@ -288,166 +336,172 @@ body {
 // 	font-family: 'Times New Roman', Times, serif; 
 // } 
 
-.body { 
-	display: flex; 
-	align-items: center; 
-	justify-content: center; 
-	// min-height: 100vh; 
-	padding: 0 35px; 
-	// background: rgb(228, 220, 220); 
+.body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    // min-height: 100vh; 
+    padding: 0 35px;
+    // background: rgb(228, 220, 220); 
     background-color: #514646;
-} 
+}
 
-.wrapper { 
-	max-width: 1100px; 
-	width: 100%; 
-	position: relative; 
+.wrapper {
+    max-width: 1100px;
+    width: 100%;
+    position: relative;
 
-} 
+}
 
-.wrapper i { 
-	height: 50px; 
-	width: 50px; 
-	// background: rgb(118, 233, 118); 
+.wrapper i {
+    height: 50px;
+    width: 50px;
+    // background: rgb(118, 233, 118); 
     // background: ;
-	text-align: center; 
-	line-height: 50px; 
-	border-radius: 50%; 
-	cursor: pointer; 
-	position: absolute; 
-	top: 50%; 
-	font-size: 1.25 rem; 
-	transform: translateY(-50%); 
-	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23); 
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    font-size: 1.25 rem;
+    transform: translateY(-50%);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
 
-} 
+}
 
-.wrapper i:hover{
+.wrapper i:hover {
     background: #514646;
     color: white;
 }
-.wrapper i:first-child { 
-	left: -22px; 
 
-} 
+.wrapper i:first-child {
+    left: -22px;
 
-.wrapper i:last-child { 
-	right: -22px; 
+}
 
-} 
+.wrapper i:last-child {
+    right: -22px;
 
-.wrapper .carousel { 
-	display: grid; 
-	grid-auto-flow: column; 
-	grid-auto-columns: calc((100% / 3) - 12px); 
-	gap: 16px; 
-	overflow-x: auto; 
-	scroll-snap-type: x mandatory; 
-	scroll-behavior: smooth; 
-	scrollbar-width: 0; 
-} 
+}
 
-.carousel::-webkit-scrollbar { 
-	display: none; 
-} 
+.wrapper .carousel {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 12px);
+    gap: 16px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: 0;
+}
 
-.carousel :where(.card, .img) { 
-	display: flex; 
-	align-items: center; 
-	justify-content: center; 
-} 
+.carousel::-webkit-scrollbar {
+    display: none;
+}
 
-.carousel.dragging { 
-	scroll-snap-type: none; 
-	scroll-behavior: auto; 
-} 
+.carousel :where(.card, .img) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-.carousel.no-transition { 
-	scroll-behavior: auto; 
-} 
+.carousel.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+}
 
-.carousel.dragging .card { 
-	cursor: grab; 
-	user-select: none; 
-} 
+.carousel.no-transition {
+    scroll-behavior: auto;
+}
 
-.carousel .card { 
-	scroll-snap-align: start; 
-	height: 390px; 
-	list-style: none; 
-	background: #fff; 
-	border-radius: 8px; 
-	display: flex; 
-	cursor: pointer; 
-	width: 98%; 
-	// padding-bottom: 15px; 
+.carousel.dragging .card {
+    cursor: grab;
+    user-select: none;
+}
+
+.carousel .card {
+    scroll-snap-align: start;
+    height: 390px;
+    list-style: none;
+    background: #fff;
+    border-radius: 8px;
+    display: flex;
+    cursor: pointer;
+    width: 98%;
+    // padding-bottom: 15px; 
     padding: 20px;
-	align-items: center; 
-	justify-content: center; 
-	flex-direction: column; 
-} 
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
-.card .img { 
-	background: #514646; 
-	width: 145px; 
-	height: 145px; 
-	border-radius: 50%; 
+.card .img {
+    background: #514646;
+    width: 145px;
+    height: 145px;
+    border-radius: 50%;
 
-} 
+}
 
-.card .img img { 
-	width: 140px; 
-	height: 140px; 
-	object-fit: cover; 
-	border-radius: 50%; 
-	border: 4px solid #fff; 
-} 
+.card .img img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid #fff;
+}
 
-.card h2 { 
-	font-weight: 500; 
-	font-size: 1.56rem; 
-	margin: 30px 0 5px; 
-} 
+.card h2 {
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
+}
 
-.card span { 
-	color: #6a6d78; 
-	font-size: 1.31rem; 
+.card span {
+    color: #6a6d78;
+    font-size: 1.31rem;
 
-} 
-.card .img img:hover{
+}
+
+.card .img img:hover {
     animation-name: card-animation;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
-@keyframes card-animation{
-    100%{
+
+@keyframes card-animation {
+    100% {
         transform: rotate(4deg);
         // width: 300px;
         // border-radius: 22px;
     }
 }
-@media screen and (max-width: 900px) { 
-	.wrapper .carousel { 
-		grid-auto-columns: calc((100% / 2) - 9px); 
 
-	} 
-} 
+@media screen and (max-width: 900px) {
+    .wrapper .carousel {
+        grid-auto-columns: calc((100% / 2) - 9px);
 
-@media screen and (max-width: 600px) { 
-	.wrapper .carousel { 
-		grid-auto-columns: 100%; 
-
-	} 
+    }
 }
-.card1{
+
+@media screen and (max-width: 600px) {
+    .wrapper .carousel {
+        grid-auto-columns: 100%;
+
+    }
+}
+
+.card1 {
     // width: 500px;
     // margin: 12px auto;
     text-align: center;
-    padding:32px 12px;
+    padding: 32px 12px;
     // border: 1px solid lightgray;
     border-radius: 16px;
 }
-input{
+
+input {
     margin: 0 auto;
     width: 50%;
     border: 1px solid lightgray;
@@ -455,13 +509,15 @@ input{
     margin-bottom: 22px;
     border-radius: 12px;
 }
+
 @media only screen and (max-width: 786px) {
-    .h1{
+    .h1 {
         font-size: 30px;
     }
 }
+
 @media only screen and (min-width: 786px) {
-    .h1{
+    .h1 {
         font-size: xxx-large;
     }
 }
